# muscovite-harbor

./: .gitignore  .harbor-baseline.json  AGENTS.md  CMakeLists.txt  LICENSE  LICENSE-COMMERCIAL  README.md  conanfile.py  harbor-manifest.json  project.mus  tmp_global.conf
.github/: copilot-instructions.md
.github/prompts/: skill-add-entity.prompt.md  skill-debug-build.prompt.md  skill-infrastructure.prompt.md  skill-modify-dsl.prompt.md  skill-regenerate.prompt.md
cmake/: Version.cmake  version.hpp.in
conan_profiles/: debug  release  relwithdebinfo
contexts/: cargo-decomposition.ddd  cargo-operations.ddd  cargo.ddd  harbour-control.ddd  intermodal-transfer.ddd  passenger-terminal.ddd  port-operations.ddd  vessel-traffic.ddd
doc/: ARCHITECTURE.md  DSL-QUICK-REFERENCE.md  INFRASTRUCTURE.md  MUSCOMP-REFERENCE.md  PROJECT-DSL-REFERENCE.md  TYPE-MAPPINGS.md
doc/adr/: 001-muscovite-dsl-single-source-of-truth.md  002-harbor-domain-context-boundaries.md  003-iteration-and-release-governance.md  004-generated-artifacts-checked-in.md  005-architecture-reset-6-context-harbour-platform.md  README.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  harbor_smoke_test.cpp
tools/: lint.sh  regenerate.sh  verify-generated.sh
